# rustgram

./: Cargo.toml  README.md
src/: app.rs  input_event_handler.rs  main.rs  terminal.rs  ui.rs  utils.rs
src/input_event_handler/: mod.rs
src/telegram_integrations/: mod.rs
src/terminal_colors/: mod.rs
src/ui/: mod.rs
