[package]
name = "rustgram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.12.0"
console = "0.15.7"
grammers-client = "0.4.0"
grammers-session = "0.4.0"
grammers-mtsender = "0.4.0"
tokio = {version = "1.32", features = ["full"]}
ratatui = { version = "0.23.0", features = ["all-widgets"]}
crossterm = "0.27"
anyhow = "1.0.75"
tui-textarea = { version = "0.2.2", features = ["ratatui-crossterm"], default-features = false}