[package]
name = "rustgram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
grammers-client = "0.4.0"
grammers-session = "0.4.0"
grammers-mtsender = "0.4.0"
grammers-tl-types = "0.4.0"
tokio = {version = "1.32", features = ["full"]}
ratatui = { version = "0.25.0", features = ["all-widgets"]}
crossterm = "0.27"
anyhow = "1.0.75"
tui-textarea = { version = "0.4.0", features = ["crossterm"], default-features = false}
unicode-segmentation = "1.8.0"